--- a/assign1/styles/style.css
+++ b/assign1/styles/style.css
@@ -710,16 +710,15 @@ textarea{
     margin-right: 5vw;
   }
 
-<<<<<<< HEAD
-  #parallax-container p, #parallax-container td, #parallax-container li{
-    padding: 1.3vmin;
-=======
   #parallax-container p, #parallax-container td, #parallax-container li, #parallax-container figcaption{
     padding: 4.5vmin;
->>>>>>> a25f265d5500a04448a629d0b314713fed450b73
     font-size: 4vmin;
     margin-left: 5vw;
     margin-right: 5vw;
+  }
+
+  #parallax-container td{
+    padding: 1.3vmin;
   }
 
   .no-parallax img{
